[gd_scene load_steps=2 format=3 uid="uid://dng_shop_popup"]

[ext_resource type="Script" path="res://scripts/dungeon/popups/dungeon_shop_popup.gd" id="1_script"]
[node name="ShopPopup" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

; --- dark overlay ---

[node name="PanelBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65)

; --- centered panel ---

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(360, 250)

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

; --- shop title ---

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Shop"
horizontal_alignment = 1
theme_type_variation = &"title"
theme_override_colors/font_color = Color(0.95, 0.85, 0.4, 1)
theme_override_constants/outline_size = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

; --- scrollable item list (FoldableContainers spawned here at runtime) ---

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemsContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

; --- gold display ---

[node name="GoldLabel" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Gold: 0"
horizontal_alignment = 1

; --- close button ---

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Leave Shop"
